[gd_scene load_steps=40 format=3 uid="uid://dhaqro4tftqwb"]

[ext_resource type="Script" uid="uid://7uo1c5nx3a3h" path="res://scenes/player/player.gd" id="1_dovo2"]
[ext_resource type="Texture2D" uid="uid://b6xh6wl1oodtk" path="res://Ninja Adventure - Asset Pack/Actor/Characters/OldMan2/SeparateAnim/Attack.png" id="2_0owmy"]
[ext_resource type="Texture2D" uid="uid://suavcmennwq6" path="res://Ninja Adventure - Asset Pack/Actor/Characters/OldMan2/SeparateAnim/Walk.png" id="2_dovo2"]
[ext_resource type="Texture2D" uid="uid://c442dpjcf7elt" path="res://Ninja Adventure - Asset Pack/Actor/Characters/OldMan2/SeparateAnim/Item.png" id="3_gmlin"]
[ext_resource type="Texture2D" uid="uid://dkd8hqtbvw4gd" path="res://Ninja Adventure - Asset Pack/Items/Treasure/GoldKey.png" id="4_lvxji"]
[ext_resource type="Texture2D" uid="uid://8f5lmr1idfpf" path="res://Ninja Adventure - Asset Pack/Heart2.png" id="5_p47bc"]
[ext_resource type="Texture2D" uid="uid://3i4uhvdxg8e0" path="res://Ninja Adventure - Asset Pack/Items/Weapons/Sword2/Sprite.png" id="6_75vfm"]

[sub_resource type="AtlasTexture" id="AtlasTexture_cnsyf"]
atlas = ExtResource("2_0owmy")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_007i1"]
atlas = ExtResource("2_0owmy")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6cv16"]
atlas = ExtResource("2_0owmy")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_j4nxn"]
atlas = ExtResource("2_0owmy")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_gmlin"]
atlas = ExtResource("2_dovo2")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_lvxji"]
atlas = ExtResource("2_dovo2")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_p47bc"]
atlas = ExtResource("2_dovo2")
region = Rect2(0, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_75vfm"]
atlas = ExtResource("2_dovo2")
region = Rect2(0, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0owmy"]
atlas = ExtResource("2_dovo2")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qek5x"]
atlas = ExtResource("2_dovo2")
region = Rect2(32, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5gtgg"]
atlas = ExtResource("2_dovo2")
region = Rect2(32, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_h17s1"]
atlas = ExtResource("2_dovo2")
region = Rect2(32, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_je7p5"]
atlas = ExtResource("2_dovo2")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fm80t"]
atlas = ExtResource("2_dovo2")
region = Rect2(48, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_gx1jg"]
atlas = ExtResource("2_dovo2")
region = Rect2(48, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ugbui"]
atlas = ExtResource("2_dovo2")
region = Rect2(48, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fcs02"]
atlas = ExtResource("2_dovo2")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_myrg7"]
atlas = ExtResource("2_dovo2")
region = Rect2(16, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_kvlxm"]
atlas = ExtResource("2_dovo2")
region = Rect2(16, 32, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_uf5tr"]
atlas = ExtResource("2_dovo2")
region = Rect2(16, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_lgqa7"]
atlas = ExtResource("3_gmlin")
region = Rect2(0, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_lgqa7"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cnsyf")
}],
"loop": true,
"name": &"attack_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_007i1")
}],
"loop": true,
"name": &"attack_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6cv16")
}],
"loop": true,
"name": &"attack_right",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j4nxn")
}],
"loop": true,
"name": &"attack_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gmlin")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lvxji")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p47bc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_75vfm")
}],
"loop": true,
"name": &"move_down",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_0owmy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qek5x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5gtgg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h17s1")
}],
"loop": true,
"name": &"move_left",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_je7p5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fm80t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gx1jg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ugbui")
}],
"loop": true,
"name": &"move_right",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fcs02")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_myrg7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kvlxm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uf5tr")
}],
"loop": true,
"name": &"move_up",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lgqa7")
}],
"loop": true,
"name": &"reward",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_onrkg"]
radius = 5.0
height = 12.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dovo2"]
size = Vector2(10, 10)

[sub_resource type="CircleShape2D" id="CircleShape2D_lvxji"]
radius = 4.12311

[sub_resource type="LabelSettings" id="LabelSettings_lvxji"]
font_size = 48

[sub_resource type="AtlasTexture" id="AtlasTexture_8ydkj"]
atlas = ExtResource("5_p47bc")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_3j4b4"]
atlas = ExtResource("5_p47bc")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_yj68g"]
atlas = ExtResource("5_p47bc")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ioxgp"]
atlas = ExtResource("5_p47bc")
region = Rect2(48, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_cnsyf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ydkj")
}],
"loop": true,
"name": &"0hp",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3j4b4")
}],
"loop": true,
"name": &"1hp",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yj68g")
}],
"loop": true,
"name": &"2hp",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ioxgp")
}],
"loop": true,
"name": &"3hp",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_75vfm"]
size = Vector2(8, 20)

[node name="Player" type="CharacterBody2D"]
motion_mode = 1
script = ExtResource("1_dovo2")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_lgqa7")
animation = &"move_down"
autoplay = "move_down"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 2)
shape = SubResource("CapsuleShape2D_onrkg")

[node name="InteractArea" type="Area2D" parent="."]
position = Vector2(0, 8)
collision_layer = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractArea"]
shape = SubResource("RectangleShape2D_dovo2")
debug_color = Color(0.13109, 0.869127, 0.678827, 0.42)

[node name="Key" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, -16)
texture = ExtResource("4_lvxji")

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(0, 1)
shape = SubResource("CircleShape2D_lvxji")
debug_color = Color(0.948992, 0.189822, 0.322724, 0.42)

[node name="KeyTimer" type="Timer" parent="."]
one_shot = true

[node name="UI" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="UI"]
offset_left = 148.0
offset_top = 29.0
offset_right = 359.0
offset_bottom = 102.0
metadata/_edit_group_ = true

[node name="Label" type="Label" parent="UI/Panel"]
layout_mode = 0
offset_left = 18.0
offset_top = 5.0
offset_right = 86.0
offset_bottom = 72.0
text = "0"
label_settings = SubResource("LabelSettings_lvxji")
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="UI/Panel"]
layout_mode = 0
offset_left = 102.0
offset_top = 14.0
offset_right = 189.0
offset_bottom = 61.0
texture = ExtResource("4_lvxji")

[node name="HPBar" type="AnimatedSprite2D" parent="UI"]
unique_name_in_owner = true
position = Vector2(75, 68)
scale = Vector2(5, 5)
sprite_frames = SubResource("SpriteFrames_cnsyf")
animation = &"3hp"

[node name="Sword" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, -15)
texture = ExtResource("6_75vfm")

[node name="SwordArea2D" type="Area2D" parent="Sword"]
unique_name_in_owner = true
collision_layer = 2
collision_mask = 16
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sword/SwordArea2D"]
shape = SubResource("RectangleShape2D_75vfm")

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[connection signal="body_entered" from="InteractArea" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="InteractArea" to="." method="_on_area_2d_body_exited"]
[connection signal="body_entered" from="Hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="timeout" from="KeyTimer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="Sword/SwordArea2D" to="." method="_on_sword_area_2d_body_entered"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
